configs_openlab/stettenstr/doku/iptables-save.txt
# Generated by iptables-save v1.4.21 on Thu Mar 17 23:26:24 2016
*mangle
:PREROUTING ACCEPT [532850:429789413]
:INPUT ACCEPT [252668:224677241]
:FORWARD ACCEPT [278669:205013182]
:OUTPUT ACCEPT [181352:33829143]
:POSTROUTING ACCEPT [463419:240581361]
-A PREROUTING -s 10.11.0.0/16 -j MARK --set-xmark 0x3/0xffffffff
-A PREROUTING -s 172.16.0.0/24 -j MARK --set-xmark 0x3/0xffffffff
-A PREROUTING -s 172.16.16.0/24 -j MARK --set-xmark 0x3/0xffffffff
-A PREROUTING -s 10.11.0.0/16 -d 10.11.0.0/16 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -s 172.16.0.0/24 -d 172.16.0.0/24 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -s 172.16.16.0/24 -d 172.16.16.0/24 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -s 10.11.80.0/24 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.0.85/32 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.0.22/32 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.0.232/32 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.0.56/32 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.0.40/32 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.0.120/32 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.0.119/32 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 10.11.70.0/26 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -s 192.168.0.227/32 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -s 192.168.0.21/32 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -s 192.168.0.194/32 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -d 95.142.77.32/27 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -d 95.142.79.2/32 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -d 86.110.76.128/26 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -d 10.11.0.0/16 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 172.16.0.0/24 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 172.16.16.0/24 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 10.10.0.0/16 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 144.76.143.122/32 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 178.63.20.132/32 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 178.63.20.186/32 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 80.147.172.201/32 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 185.32.124.171/32 -j MARK --set-xmark 0x0/0xffffffff
-A PREROUTING -d 5.9.2.138/32 -j MARK --set-xmark 0x0/0xffffffff
-A OUTPUT -p tcp -m tcp --dport 222 -j MARK --set-xmark 0x2/0xffffffff
-A OUTPUT -s 192.168.179.2/32 -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -s 192.168.178.2/32 -j MARK --set-xmark 0x2/0xffffffff
COMMIT
# Completed on Thu Mar 17 23:26:24 2016
# Generated by iptables-save v1.4.21 on Thu Mar 17 23:26:24 2016
*nat
:PREROUTING ACCEPT [2248:362103]
:INPUT ACCEPT [227:35150]
:OUTPUT ACCEPT [112:7581]
:POSTROUTING ACCEPT [876:56995]
:KABELSNAT - [0:0]
:PPPSNAT - [0:0]
-A PREROUTING -d 10.11.64.1/32 -p tcp -m tcp --dport 5500 -j DNAT --to-destination 192.168.0.22
-A PREROUTING -i eth5 -p tcp -m tcp --dport 4710 -j DNAT --to-destination 192.168.0.227
-A PREROUTING -i eth5 -p udp -m udp --dport 1194 -j DNAT --to-destination 192.168.0.67
-A PREROUTING -d 192.168.178.20/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.0.1:81
-A PREROUTING -i eth5 -p tcp -m tcp --dport 224 -j DNAT --to-destination 192.168.0.167:22
-A POSTROUTING -d 192.168.0.67/32 -o br0 -p udp -m udp --dport 1194 -j SNAT --to-source 192.168.0.38
-A POSTROUTING -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 10.11.67.0/24 -o tap+ -j MASQUERADE
-A POSTROUTING -s 172.16.0.0/24 -o tap+ -j MASQUERADE
-A POSTROUTING -s 172.16.16.0/24 -o tap+ -j MASQUERADE
-A POSTROUTING -s 192.168.0.0/24 -o tap20 -j MASQUERADE
-A POSTROUTING -o eth4 -j SNAT --to-source 192.168.179.2
-A POSTROUTING -o eth5 -j SNAT --to-source 192.168.178.2
-A POSTROUTING -s 192.168.0.0/24 ! -d 192.168.0.0/24 -j MASQUERADE
-A POSTROUTING -s 192.168.255.252/30 ! -d 192.168.255.252/30 -j MASQUERADE
-A POSTROUTING -o br1 -j RETURN
-A POSTROUTING -o br2 -j RETURN
-A POSTROUTING -o eth6 -j RETURN
-A POSTROUTING -s 10.11.64.0/18 -d 192.168.0.127/32 -p tcp -m tcp --dport 5940 -j SNAT --to-source 192.168.0.38
-A POSTROUTING -o eth4 -j PPPSNAT
-A POSTROUTING -o eth5 -j KABELSNAT
-A KABELSNAT -j SNAT --to-source 192.168.178.2
-A PPPSNAT -j SNAT --to-source 192.168.179.2
COMMIT
# Completed on Thu Mar 17 23:26:24 2016
# Generated by iptables-save v1.4.21 on Thu Mar 17 23:26:24 2016
*filter
:INPUT ACCEPT [253655:224837862]
:FORWARD ACCEPT [276421:204656728]
:OUTPUT ACCEPT [182348:33993624]
-A INPUT -i eth5 -p tcp -m tcp --dport 21 -j REJECT --reject-with tcp-reset
-A INPUT -i eth4 -p tcp -m tcp --dport 21 -j REJECT --reject-with tcp-reset
-A INPUT -i tun+ -p tcp -m tcp --dport 21 -j REJECT --reject-with tcp-reset
-A FORWARD -m physdev --physdev-is-bridged -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -i br0 -j ACCEPT
-A FORWARD -s 10.10.0.0/16 -o br0 -j ACCEPT
-A FORWARD -d 10.10.0.0/16 ! -p tcp -j DROP
-A FORWARD -d 10.10.0.0/16 -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -s 10.11.0.0/16 -d 95.142.77.32/27 -o eth5 -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 95.142.79.2/32 -o eth5 -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 86.110.76.128/26 -o eth5 -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 144.76.143.122/32 -o eth5 -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 178.63.20.132/32 -o eth5 -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 178.63.20.186/32 -o eth5 -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 80.147.172.201/32 -o eth5 -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 185.32.124.171/32 -o eth5 -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 5.9.2.138/32 -o eth5 -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 79.229.168.124/32 -o eth5 -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 80.153.166.24/32 -o eth5 -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 10.11.0.0/16 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 95.142.77.32/27 -o eth5 -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 95.142.79.2/32 -o eth5 -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 86.110.76.128/26 -o eth5 -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 144.76.143.122/32 -o eth5 -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 178.63.20.132/32 -o eth5 -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 178.63.20.186/32 -o eth5 -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 80.147.172.201/32 -o eth5 -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 185.32.124.171/32 -o eth5 -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 5.9.2.138/32 -o eth5 -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 79.229.168.124/32 -o eth5 -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 80.153.166.24/32 -o eth5 -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 172.16.0.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 95.142.77.32/27 -o eth5 -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 95.142.79.2/32 -o eth5 -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 86.110.76.128/26 -o eth5 -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 144.76.143.122/32 -o eth5 -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 178.63.20.132/32 -o eth5 -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 178.63.20.186/32 -o eth5 -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 80.147.172.201/32 -o eth5 -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 185.32.124.171/32 -o eth5 -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 5.9.2.138/32 -o eth5 -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 79.229.168.124/32 -o eth5 -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 80.153.166.24/32 -o eth5 -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 172.16.16.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.70.0/26 -o eth5 -j ACCEPT
-A FORWARD -d 10.11.70.0/26 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.227/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.227/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.21/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.21/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.194/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.194/32 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.80.0/24 -o eth5 -j ACCEPT
-A FORWARD -d 10.11.80.0/24 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.85/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.85/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.22/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.22/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.232/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.232/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.56/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.56/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.40/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.40/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.120/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.120/32 -i eth5 -j ACCEPT
-A FORWARD -s 192.168.0.119/32 -o eth5 -j ACCEPT
-A FORWARD -d 192.168.0.119/32 -i eth5 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 95.142.77.32/27 -o eth4 -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 95.142.79.2/32 -o eth4 -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 86.110.76.128/26 -o eth4 -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 144.76.143.122/32 -o eth4 -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 178.63.20.132/32 -o eth4 -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 178.63.20.186/32 -o eth4 -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 80.147.172.201/32 -o eth4 -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 185.32.124.171/32 -o eth4 -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 5.9.2.138/32 -o eth4 -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 79.229.168.124/32 -o eth4 -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 80.153.166.24/32 -o eth4 -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 10.11.0.0/16 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 95.142.77.32/27 -o eth4 -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 95.142.79.2/32 -o eth4 -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 86.110.76.128/26 -o eth4 -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 144.76.143.122/32 -o eth4 -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 178.63.20.132/32 -o eth4 -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 178.63.20.186/32 -o eth4 -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 80.147.172.201/32 -o eth4 -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 185.32.124.171/32 -o eth4 -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 5.9.2.138/32 -o eth4 -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 79.229.168.124/32 -o eth4 -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 80.153.166.24/32 -o eth4 -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 172.16.0.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 95.142.77.32/27 -o eth4 -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 95.142.79.2/32 -o eth4 -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 86.110.76.128/26 -o eth4 -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 144.76.143.122/32 -o eth4 -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 178.63.20.132/32 -o eth4 -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 178.63.20.186/32 -o eth4 -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 80.147.172.201/32 -o eth4 -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 185.32.124.171/32 -o eth4 -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 5.9.2.138/32 -o eth4 -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 79.229.168.124/32 -o eth4 -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 80.153.166.24/32 -o eth4 -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 172.16.16.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.70.0/26 -o eth4 -j ACCEPT
-A FORWARD -d 10.11.70.0/26 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.227/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.227/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.21/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.21/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.194/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.194/32 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.80.0/24 -o eth4 -j ACCEPT
-A FORWARD -d 10.11.80.0/24 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.85/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.85/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.22/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.22/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.232/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.232/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.56/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.56/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.40/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.40/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.120/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.120/32 -i eth4 -j ACCEPT
-A FORWARD -s 192.168.0.119/32 -o eth4 -j ACCEPT
-A FORWARD -d 192.168.0.119/32 -i eth4 -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 95.142.77.32/27 -o tun+ -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 95.142.79.2/32 -o tun+ -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 86.110.76.128/26 -o tun+ -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 144.76.143.122/32 -o tun+ -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 178.63.20.132/32 -o tun+ -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 178.63.20.186/32 -o tun+ -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 80.147.172.201/32 -o tun+ -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 185.32.124.171/32 -o tun+ -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 5.9.2.138/32 -o tun+ -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 79.229.168.124/32 -o tun+ -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -d 80.153.166.24/32 -o tun+ -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 10.11.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 95.142.77.32/27 -o tun+ -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 95.142.79.2/32 -o tun+ -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 86.110.76.128/26 -o tun+ -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 144.76.143.122/32 -o tun+ -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 178.63.20.132/32 -o tun+ -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 178.63.20.186/32 -o tun+ -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 80.147.172.201/32 -o tun+ -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 185.32.124.171/32 -o tun+ -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 5.9.2.138/32 -o tun+ -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 79.229.168.124/32 -o tun+ -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 80.153.166.24/32 -o tun+ -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 172.16.0.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 95.142.77.32/27 -o tun+ -j ACCEPT
-A FORWARD -s 95.142.77.32/27 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 95.142.79.2/32 -o tun+ -j ACCEPT
-A FORWARD -s 95.142.79.2/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 86.110.76.128/26 -o tun+ -j ACCEPT
-A FORWARD -s 86.110.76.128/26 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 144.76.143.122/32 -o tun+ -j ACCEPT
-A FORWARD -s 144.76.143.122/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 178.63.20.132/32 -o tun+ -j ACCEPT
-A FORWARD -s 178.63.20.132/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 178.63.20.186/32 -o tun+ -j ACCEPT
-A FORWARD -s 178.63.20.186/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 80.147.172.201/32 -o tun+ -j ACCEPT
-A FORWARD -s 80.147.172.201/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 185.32.124.171/32 -o tun+ -j ACCEPT
-A FORWARD -s 185.32.124.171/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 5.9.2.138/32 -o tun+ -j ACCEPT
-A FORWARD -s 5.9.2.138/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 79.229.168.124/32 -o tun+ -j ACCEPT
-A FORWARD -s 79.229.168.124/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 172.16.16.0/24 -d 80.153.166.24/32 -o tun+ -j ACCEPT
-A FORWARD -s 80.153.166.24/32 -d 172.16.16.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.70.0/26 -o tun+ -j ACCEPT
-A FORWARD -d 10.11.70.0/26 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.227/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.227/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.21/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.21/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.194/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.194/32 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.80.0/24 -o tun+ -j ACCEPT
-A FORWARD -d 10.11.80.0/24 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.85/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.85/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.22/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.22/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.232/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.232/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.56/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.56/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.40/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.40/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.120/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.120/32 -i tun+ -j ACCEPT
-A FORWARD -s 192.168.0.119/32 -o tun+ -j ACCEPT
-A FORWARD -d 192.168.0.119/32 -i tun+ -j ACCEPT
-A FORWARD -s 10.11.0.0/16 -o eth5 ! -p tcp -j DROP
-A FORWARD -s 80.153.166.24/32 -o eth5 -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -s 172.16.0.0/24 -o eth5 ! -p tcp -j DROP
-A FORWARD -s 80.153.166.24/32 -o eth5 -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -s 172.16.16.0/24 -o eth5 ! -p tcp -j DROP
-A FORWARD -s 80.153.166.24/32 -o eth5 -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -s 10.11.0.0/16 -o eth4 ! -p tcp -j DROP
-A FORWARD -s 80.153.166.24/32 -o eth4 -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -s 172.16.0.0/24 -o eth4 ! -p tcp -j DROP
-A FORWARD -s 80.153.166.24/32 -o eth4 -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -s 172.16.16.0/24 -o eth4 ! -p tcp -j DROP
-A FORWARD -s 80.153.166.24/32 -o eth4 -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -d 192.168.0.0/24 -i eth5 -p icmp -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -i eth4 -p icmp -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -i tun+ -p icmp -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -i br1 -p icmp -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -i br2 -p icmp -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -i eth6 -p icmp -j ACCEPT
-A FORWARD -d 192.168.255.252/30 -i eth5 -p icmp -j ACCEPT
-A FORWARD -d 192.168.255.252/30 -i eth4 -p icmp -j ACCEPT
-A FORWARD -d 192.168.255.252/30 -i tun+ -p icmp -j ACCEPT
-A FORWARD -d 192.168.255.252/30 -i br1 -p icmp -j ACCEPT
-A FORWARD -d 192.168.255.252/30 -i br2 -p icmp -j ACCEPT
-A FORWARD -d 192.168.255.252/30 -i eth6 -p icmp -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -i eth5 -p icmp -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -i eth4 -p icmp -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -i tun+ -p icmp -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -i br1 -p icmp -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -i br2 -p icmp -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -i eth6 -p icmp -j ACCEPT
COMMIT
# Completed on Thu Mar 17 23:26:24 2016
